<resources>
    <string name="app_name">Langkah</string>
    <string name="landing_page_image">Landing Page Image</string>
    <string name="reach_closest_healthcare_around">Reach Closest Healthcare Around</string>
    <string name="landing_page_desc">Get to know healthcare facility<br />
        around you including the facilities<br /> and emergency action</string>
    <string name="sign_up_with_email_id">Sign Up With Email ID</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="sign_in_text">Already have an account? <u>Sign in</u></string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_langkah">Welcome to Langkah!</string>
    <string name="register_your_new_account">Register your new account!</string>
    <string name="full_name">Full Name</string>
    <string name="fill_in_your_full_name">Fill in your full name</string>
    <string name="email">Email</string>
    <string name="fill_in_your_email">Fill in your email</string>
    <string name="password">Password</string>
    <string name="fill_in_your_password">Fill in your password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="continue_step">Continue</string>
    <string name="one_step_closer">One Step Closer!</string>
    <string name="complete_the_form">Complete the form and you are ready!</string>
    <string name="phone_number">Phone Number</string>
    <string name="fill_in_your_phone_number">Fill in your phone number</string>
    <string name="fill_in_your_address">Fill in your address</string>
    <string name="home_address">Home Address</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_your_account">Sign in to your account!</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <u>Sign Up</u></string>
    <string name="home">Home</string>
    <string name="hospital">Hospital</string>
    <string name="consultation">Consultation</string>
    <string name="profile">Profile</string>
    <string name="title_activity_app">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_text">Hello, Jane!</string>
    <string name="you_are_at">You are at</string>
    <string name="your_location">Jakarta, Indonesia</string>
    <string name="refresh_location">Refresh</string>
    <string name="hospital_near_you">Hospital Near You</string>
    <string name="emergency">Emergency!</string>
    <string name="emergency_desc">Call nearest hospital for emergency situation!</string>
    <string name="call">Call</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="closest_hospital_title_page">Closest Hospital</string>
    <string name="closest_hospital_description">Here is the list of available doctors in the hospital!</string>
    <string name="search_hospital_hint">Search Hospital</string>
    <string name="description">Description</string>
    <string name="hospital_description">Hospital Description</string>
    <string name="address">Address</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="locate">Locate</string>
    <string name="make_an_appointment">Make an Appointment</string>
    <string name="see_queue">See Queue</string>
    <string name="facilities">Facilities</string>
    <string name="doctor_section">Doctor</string>
    <string name="poly_section">Polyclinics</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_specialist">Doctor Specialist</string>
    <string name="see_rooms">See Rooms</string>
    <string name="view_all_doctors">View All Doctors</string>
    <string name="view_all_polys">View All Polyclinics</string>
    <string name="polyclinics_name">Polyclinic Name</string>
    <string name="doctors_page_title">The Doctors</string>
    <string name="doctors_page_desc">Here is the list of available doctors in the hospital!</string>
    <string name="search_doctor_hint">Search Doctor</string>
    <string name="doctor_profile_text">Profile</string>
    <string name="tv_doctor_profile">Doctor Profile</string>
    <string name="doctor_schedule_text">Schedule</string>
    <string name="sample_schedule">Monday 09:00 - 15:00</string>
    <string name="polyclinics_page_title">The Polyclinics</string>
    <string name="polyclinics_page_desc">Here is the list of available polyclinics in the hospital!</string>
    <string name="search_polyclinic_hint">Search Polyclinic</string>
    <string name="room_page_title">Room Facility</string>
    <string name="room_page_desc">Here is the list of available rooms in the hospital!</string>
    <string name="search_room_hint">Search Room</string>
    <string name="room_type">Room Type</string>
    <string name="price_per_day">Price/Day</string>
    <string name="dp">DP</string>
    <string name="services">Services</string>
    <string name="pre_inspection">Pre-Inspection</string>
    <string name="sample_price">Rp 1000,00</string>
    <string name="birthdate">Confirm Birthdate</string>
    <string name="your_birthdate">Your Birthdate</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="appointment_page_desc">Make an Appointment at the nearest hospital</string>
    <string name="choose_polyclinc_text">Choose Polyclinic</string>
    <string name="choose_poly">Choose</string>
    <string name="tell_us_your_complaints_of_disease">Tell us your complaints of disease!</string>
    <string name="btn_make_appointment">Make Appointment</string>
    <string name="choose_date_and_time">Choose Date and Time</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="queue_page_title">Check out the queue!</string>
    <string name="queue_page_desc">Here is the list of hospital’s queue based on polyclinics!</string>
    <string name="total_appointment">Total: %d</string>
    <string name="sample_name">User Name</string>
    <string name="dash">-</string>
    <string name="sample_email">User Email</string>
    <string name="sample_phone">User Phone Number</string>
    <string name="sample_status">Appointment Status</string>

    <string name="no_appointment">No Appointment</string>
    <string name="appointment_on_process">Appointment on Process</string>
    <string name="appointment_made">Appointment Made</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="make_sure_to_make_an_appointment_first">Make sure to make an appointment first</string>
    <string name="sign_out">Sign Out</string>
    <string name="appointment_on_process_text">Please wait, your appointment is on process</string>
    <string name="with">With</string>
    <string name="on">On</string>
    <string name="edit_page_title">Edit your Profile!</string>
    <string name="edit_page_description">Try to renew something?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_your_password">Change Your Password!</string>
    <string name="change_password_desc">Make sure to remember the new one!</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-Type New Password</string>
    <string name="vertigo">(vertigo) Paroymsal  Positional Vertigo</string>
    <string name="aids">AIDS</string>
    <string name="acne">Acne</string>
    <string name="alcohepa">Alcoholic hepatitis</string>
    <string name="allergy">Allergy</string>
    <string name="arthritis">Arthritis</string>
    <string name="bronc_asthma">Bronchial Asthma</string>
    <string name="Cervical_Spondylosis">Cervical Spondylosis</string>
    <string name="Chicken_P">Chicken Pox</string>
    <string name="Chronic_Choles">Chronic Cholestasis</string>
    <string name="common_cold">Common Cold</string>
    <string name="dengue">Dengue</string>
    <string name="diabet">Diabetes</string>
    <string name="piles">Dimorphic Hemmorhoids(piles)</string>
    <string name="drug_react">Drug Reaction</string>
    <string name="fungal_infect">Fungal infection</string>
    <string name="gerd">GERD</string>
    <string name="gastroenter">Gastroenteritis</string>
    <string name="heart_attak">Heart attack</string>
    <string name="hepatitis_B">Hepatitis B</string>
    <string name="Hepatitis_C">Hepatitis C</string>
    <string name="Hepatitis_D">Hepatitis D</string>
    <string name="Hepatitis_E">Hepatitis E</string>
    <string name="Hpertensi">Hypertension</string>
    <string name="Hperthroid">Hyperthyroidism</string>
    <string name="Hypogy">Hypoglycemia</string>
    <string name="hypothiroid">Hypothyroidism</string>
    <string name="impetigo">Impetigo</string>
    <string name="jaundice">Jaundice</string>
    <string name="malaria">Malaria</string>
    <string name="migraine">Migraine</string>
    <string name="osteorarthirs">Osteoarthristis</string>
    <string name="paralysis">Paralysis (brain hemorrhage)</string>
    <string name="peptic_ulcer">\'Peptic ulcer diseae</string>
    <string name="pneumonia">Pneumonia</string>
    <string name="psoriasis">Psoriasis</string>
    <string name="tbc">Tuberculosis</string>
    <string name="typhoid">Typhoid</string>
    <string name="urinary_tract">Urinary tract infection</string>
    <string name="varicose_vens">Varicose veins</string>
    <string name="hepatitis_A">hepatitis A</string>
    <string name="error">ERROR</string>
    <string name="consultation_fragment_title">Ready to answer a few questions?</string>
    <string name="consultation_fragment_desc">With Langkah, you can consult your complaints and make an appointment for it through recomendation.</string>
    <string name="btn_get_started">Get Started</string>
    <string name="sample_question">Sample Question</string>
    <string name="tv_true">True</string>
    <string name="tv_false">False</string>
    <string name="submit">Submit</string>
    <string name="submit_the_complaints">Submit the complaints?</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="consultation_result_title">Here is the result:</string>
    <string name="sample_symptom">Sample Symptom</string>
    <string name="appointment_message">There is a hospital nearby that can help with your disease. Make an appointment right now!</string>
    <string name="poliklinik">poliklinik</string>
    <string name="skip_appointment">Skip Appointment</string>
</resources>