<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/hospital_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_local_hospital_24"
        android:title="@string/hospital"/>
    <item
        android:id="@+id/consultation_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/consultation"/>

    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>
</menu>