<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.newshelter.langkah.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hospital"
        android:name="com.newshelter.langkah.HospitalFragment"
        android:label="@string/hospital"
        tools:layout="@layout/fragment_hospital" />

    <fragment
        android:id="@+id/navigation_consultation"
        android:name="com.newshelter.langkah.ConsultationFragment"
        android:label="@string/consultation"
        tools:layout="@layout/fragment_consultation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.newshelter.langkah.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>