<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLanding"
    android:background="@color/white"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/landing_img"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/landing_page_image"
        android:src="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/materialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/now_bold"
        android:text="@string/reach_closest_healthcare_around"
        android:textAlignment="center"
        android:textSize="32sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/now_medium"
        android:layout_marginBottom="32dp"
        android:text="@string/landing_page_desc"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        tools:layout_editor_absoluteX="16dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/now_bold"
        android:backgroundTint="@color/blue_main"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_8"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lazySignUp"
        tools:layout_editor_absoluteX="16dp"
        android:text="@string/sign_up_with_email_id"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lazySignUp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/now_bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/rounded_button_8"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="16dp"
        android:text="@string/sign_up_with_google"
        app:icon="@drawable/ic_round_add_circle_24"
        app:layout_constraintBottom_toTopOf="@id/signInText"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/now_medium"
        android:text="@string/sign_in_text"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>