<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/now_medium"
            android:textSize="18sp"
            android:text="@string/sample_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_doctor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/now_regular"
            android:layout_marginTop="8dp"
            android:text="@string/doctor_name"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_appointment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/now_bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/blue_accent"
            app:layout_constraintTop_toBottomOf="@id/tv_doctor_name"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/appointment_date"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/now_bold"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/tv_appointment_date"
            app:layout_constraintStart_toEndOf="@id/tv_appointment_date"
            android:text="@string/dash"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_appointment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/now_bold"
            android:textColor="@color/blue_accent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/tv_appointment_date"
            app:layout_constraintStart_toEndOf="@id/dash"
            android:text="@string/appointment_time"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>