<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSignUpWithEmail"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:fontFamily="@font/now_bold"
            android:text="@string/edit_page_title"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/edit_page_description"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/edit_title" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/full_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_tf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/fill_in_your_full_name"
            android:textColorHint="@color/light_grey"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/now_regular"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/name_tf" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_tf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/fill_in_your_email"
            android:textColorHint="@color/light_grey"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/now_regular"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/home_address"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/email_tf" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_tf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fill_in_your_address"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/light_grey"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/now_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/phone_number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/address_tf" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_tf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/fill_in_your_phone_number"
            android:textColorHint="@color/light_grey"
            app:layout_constraintStart_toStartOf="@+id/edit_title"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/now_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_8"
            android:fontFamily="@font/now_bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_tf"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>